Improve font colors

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <a href="https://fede.dm/" rel="author">Federico del Mazo</a>
   </header>
 
-  <p></p>
-
   <footer>
     <aside>January X, 2022</aside>
     <a href="https://fede.dm/" rel="author">Federico del Mazo</a>
@@ -33,7 +31,7 @@
     body {
       background-color: #f0ecdc;
       background-image: url("./texture.png");
-      color: #181b26;
+      color: #252321;
       margin: 1em 6em 4em 6em;
       font-family: "PT Sans", sans-serif;
       width: 960px;
@@ -43,12 +41,17 @@
     h2,
     h3,
     h4 {
-      color: #23191e;
+      color: #181b26;
     }
 
     header,
     footer {
-      color: #3d4c51;
+      color: #4d646c;
+    }
+
+    .lead {
+      text-indent: 2ch;
+      color: #4d646c;
     }
 
     h1 {
@@ -60,7 +63,9 @@
     }
 
     h2 {
-      margin-top: 2em;
+      margin-top: 1em;
+      margin-bottom: 1em;
+      font-weight: 400;
     }
 
     header,
