Add a first few paragraphs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,83 @@
     <a href="https://fede.dm/" target="_blank" rel="author">Federico del Mazo</a>
   </header>
 
+  <p class="lead">
+    I feel like I should have a blog. Specifically, a tech blog. Everything points towards it! I
+    like coding, I like reading, I particularly like reading <em>blog posts</em>. So then, why don't
+    I have one?!
+  </p>
 
+  <aside>
+    <p>
+      <sup>1</sup>
+      If by any chance you get an idea of my reading tastes and have a book in mind that I'll like,
+      <a href="https://github.com/FdelMazo/blog/issues/1/#new_comment_field" target="_blank">let me know!</a>
+    </p>
+
+
+    <p>
+      <sup>2</sup>
+      I know I'm doing a huge disservice to this people with this quick and done summaries of their lives and
+      contributions, but just bear with me while I try to make my case.
+    </p>
+
+    <p>
+      <sup>3</sup>
+      UNIX: A History and a Memoir >> Chapter 5 >> 5.3 Document Preparation >> Book publication
+    </p>
+  </aside>
+
+  <p>
+    This past summer I bought and read exactly three books:
+    <em>
+      <a href="https://www.goodreads.com/book/show/24091886-raw-thought-raw-nerve" target="_blank">
+        Raw Thought, Raw Nerve</a>
+    </em>
+    by Aaron Swartz,
+    <em>
+      <a href="https://www.goodreads.com/book/show/134825.The_Cathedral_the_Bazaar" target="_blank">
+        The Cathedral & the Bazaar</a>
+    </em>
+    by Eric S. Raymond, and
+    <em><a href="https://www.goodreads.com/book/show/53011383-unix" target="_blank">
+        UNIX: A History and a Memoir</a></em>
+    by Brian Kernighan<sup>1</sup>.
+
+    One is a recollection of past blog posts written by one of the most influential programmers and internet activists
+    of this century, another one is a collection of essays by an authority on written hackerdom history, and the last
+    one is a memoir by a CS legend whose most important contributions include books considered the state of
+    the art on techcnical writing<sup>2</sup>.
+  </p>
+
+  <p>
+    What do they all have in common? An emphasis on the written word! And not only that: this very same people strongly
+    encourage the written word! On Eric S. Raymond's <em><a href="http://www.catb.org/esr/faqs/hacker-howto.html#style">
+        How To Become A Hacker</a></em> he suggests that a good programmer should learn to write well. On his blog,
+    Aaron Swartz
+    <a href="http://www.aaronsw.com/weblog/about">explains</a> how writing things down will help him reflect better on
+    his thoughts. Heck, even BWK's talks<sup>3</sup> about how taking writing seriously will get you a long way.
+    My point is... there is a clear connection between CS and the written word.
+  </p>
+
+  <p>
+    So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I badly
+    want one! I have side projects of which I'm proud of, I do encounter bugs on my job that feel like they deserve a
+    post dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
+  </p>
+
+  <p>
+    So, we've already established that I'm a good <em>recipe</em> for a blog person, and realizing that I would love to
+    follow the steps of my idols... <b>why don't I have a blog?</b>
+  </p>
+
+  <h2>I don't have anything interesting to say</h2>
+
+  <p>
+    First things first: I don't have anything interesting to say. Or, more specifically, even if I do have stuff to say,
+    what I don't have is stuff to <em>add</em> to the internet.
+
+    <em>To be continued...</em>
+  </p>
 
   <hr />
   <hr />
