--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>
       <sup>4</sup>
       Marco Rogers has some really good <a href="https://twitter.com/polotek/status/1351297231916187648"
-        target="_blank">thoughts</a> on this topic
+        target="_blank">thoughts</a> on this topic.
     </p>
   </aside>
 
@@ -78,31 +78,31 @@
   </p>
 
   <p>
-    What do they all have in common? An emphasis on the written word! And not only that: this very same people strongly
-    encourage the written word! On Eric S. Raymond's <em><a href="http://www.catb.org/esr/faqs/hacker-howto.html#style">
-        How To Become A Hacker</a></em> he suggests that a good programmer should learn to write well. On his blog,
-    Aaron Swartz
-    <a href="http://www.aaronsw.com/weblog/about">explains</a> how writing things down will help him reflect better on
-    his thoughts. Heck, even BWK's talks<sup>3</sup> about how taking writing seriously will get you a long way.
-    My point is... there is a clear connection between CS and the written word.
+    What do they all have in common? An emphasis on the written word. And not only that: this very same people strongly
+    encourage the written word. On Eric S. Raymond's <em><a href="http://www.catb.org/esr/faqs/hacker-howto.html#style"
+        target="_blank"> How To Become A Hacker</a></em> he suggests that a good programmer should learn to write well.
+    On his blog, Aaron Swartz <a href="http://www.aaronsw.com/weblog/about" target="_blank">explains</a> how writing
+    things down will help him reflect better on his thoughts. Heck, even BWK's talks<sup>3</sup> about how taking
+    writing seriously will get you a long way. My point is... there is a clear connection between CS and the written
+    word.
   </p>
 
   <p>
-    So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I badly
+    So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I
     want one! I have side projects of which I'm proud of, I do encounter bugs that feel like they deserve a post
     dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
   </p>
 
   <p>
-    So, we've already established that I'm a good <em>recipe</em> for a blog person, and realizing that I would love to
-    follow the steps of my idols... <b>why don't I have a blog?</b>
+    So, we've already established that I'm a good <em>recipe</em> for a blog person, and I would love to
+    follow the steps of my idols... so, <b>why don't I have a blog?</b>
   </p>
 
   <h2>I don't have anything interesting to say</h2>
 
   <p>
     First things first: I don't have anything interesting to say. Or, more specifically, even if I do have stuff to say,
-    what I don't have is stuff to <em>add</em> to the internet.
+    what I don't have is stuff to <em>add</em>.
   </p>
 
   <p>
@@ -123,10 +123,10 @@
 
   <p>
     Whenever I try to search for a how-to online, or I need to do a quick "Hello, World!", I often find myself skipping
-    the first 5~10 search results. They are your tipical run-of-the-mill tutorial that replicates what's written on the
-    official framework/language guide<sup>4</sup>. At least to me, this content ends up adding noise to the internet.
-    And that's the last thing I would like to do! I love the internet! Adding unneccesary stuff to it is exactly what I
-    want to avoid!!
+    the first 5~10 search results. They are your tipical run-of-the-mill tutorials that replicate what's written on the
+    official framework/language guide<sup>4</sup>. At least to me, this content just end up adding noise to the
+    internet. And that's the last thing I would like to do! I love the internet! Adding unneccesary stuff to it is
+    exactly what I want to avoid!
   </p>
 
   <p>
@@ -135,10 +135,9 @@
     ones that you solve clicking on the correct StackOverflow link. If I were to blog about my experiences on React, it
     would be exactly the same as everybody else's (i.e, an article that teaches on how to use `useState()` with a number
     counting component). I don't have a specific framework on which I'm savvy enough to talk about the internals of. I
-    get that sometimes an impostor syndrome is just that, a person doubting themselves and feeling like frauds. But
-    sometimes, you are not an impostor (nor a fraud), you just are. Maybe I just don't have any particularly good war
-    stories (the ones that are really useful on those "What's the weirdest bug you ever encountered?" programming
-    interviews) and am just inexperienced.
+    don't have any particularly good war stories (the ones that are really useful on those "What's the weirdest bug you
+    ever encountered?" programming interviews). I get that sometimes an impostor syndrome is that, a person
+    doubting themselves and feeling like a fraud. But sometimes, you are not an impostor (nor a fraud), you just are.
   </p>
 
   <h2>I don't think it's good CV building</h2>
@@ -148,12 +147,12 @@
     nowadays just <em>doing</em> is not enough. Nowadays it seems that you have to both do, and talk about what you just
     did. Build a whole narrative around it. You have to code a new feature, and then talk about it in your latest 1:1
     with your manager. And don't forget to write how you are proud of it in your perfomance review, or it doesn't count.
-    Sometimes you can build it, and no one will come. Sometimes talk is not cheap, and showing the code is not enough.
+    If you just build it, maybe no one will come. Sometimes talk is not cheap, and showing the code is not enough.
   </p>
 
   <p>
     But I'm tired of that! Not all tech side-projects have a cute origin story, and not everything built should have a
-    post accompanying it. Even though something may seem technically cute, there might be not so much to talk around.
+    post accompanying it. Even though something may seem technically cute, there might be not so much to talk around it.
     Not all code speaks for itself, but making a circus around it shouldn't be the solution.
   </p>
 
