--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h1>Why don't I have a blog?</h1>
   <header>
-    <aside>January X, 2022</aside>
+    <aside>January 12, 2022</aside>
     <a href="https://fede.dm/" target="_blank" rel="author">Federico del Mazo</a>
   </header>
 
@@ -175,7 +175,7 @@
   </div>
 
   <footer>
-    <aside>January X, 2022</aside>
+    <aside>January 12, 2022</aside>
     <a href="https://fede.dm/" rel="author" target="_blank">Federico del Mazo</a>
 
     <p class="credits">
