Proof read blog post

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <p>
       <sup>2</sup>
-      I know I'm doing a huge disservice to this people with this quick and done summaries of their lives and
+      I know I'm doing a huge disservice to these people with these quick and done summaries of their lives and
       contributions, but just bear with me while I try to make my case.
     </p>
 
@@ -74,28 +74,28 @@
     One is a recollection of past blog posts written by one of the most influential programmers and internet activists
     of this century, another one is a collection of essays by an authority on written hackerdom history, and the last
     one is a memoir by a CS legend whose most important contributions include books considered the state of
-    the art on techcnical writing<sup>2</sup>.
+    the art on technical writing<sup>2</sup>.
   </p>
 
   <p>
-    What do they all have in common? An emphasis on the written word. And not only that: this very same people strongly
-    encourage the written word. On Eric S. Raymond's <em><a href="http://www.catb.org/esr/faqs/hacker-howto.html#style"
+    What do they all have in common? An emphasis on the written word. And not only that: these very same people strongly
+    encourage the written word. In Eric S. Raymond's <em><a href="http://www.catb.org/esr/faqs/hacker-howto.html#style"
         target="_blank"> How To Become A Hacker</a></em> he suggests that a good programmer should learn to write well.
     On his blog, Aaron Swartz <a href="http://www.aaronsw.com/weblog/about" target="_blank">explains</a> how writing
-    things down will help him reflect better on his thoughts. Heck, even BWK's talks<sup>3</sup> about how taking
+    things down will help him reflect better on his thoughts. Heck, even BWK talks<sup>3</sup> about how taking
     writing seriously will get you a long way. My point is... there is a clear connection between CS and the written
     word.
   </p>
 
   <p>
     So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I
-    want one! I have side projects of which I'm proud of, I do encounter bugs that feel like they deserve a post
-    dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
+    want one! I have side projects of which I'm proud of, I do encounter bugs that feel like they deserve an entire
+    post dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
   </p>
 
   <p>
     So, we've already established that I'm a good <em>recipe</em> for a blog person, and I would love to
-    follow the steps of my idols... so, <b>why don't I have a blog?</b>
+    follow the steps of my idols... <b>why don't I have a blog?</b>
   </p>
 
   <h2>I don't have anything interesting to say</h2>
@@ -114,7 +114,8 @@
 
   <p>
     Now, let's say I did have a strong, unique, novel opinion on something and that I'll gladly write it down somewhere.
-    But then... isn't that just Twitter? I dont have Twitter for a reason: nobody cares about my thoughts. So, why would
+    But then... isn't that just Twitter? I don't have Twitter for a reason: nobody cares about my thoughts. So, why
+    would
     they care about my longer-than-140-characters thoughts? I'm not trying to say that a blog and social media are the
     exact same medium, but in the end... it's just me, talking about myself.
   </p>
@@ -123,18 +124,19 @@
 
   <p>
     Whenever I try to search for a how-to online, or I need to do a quick "Hello, World!", I often find myself skipping
-    the first 5~10 search results. They are your tipical run-of-the-mill tutorials that replicate what's written on the
-    official framework/language guide<sup>4</sup>. At least to me, this content just end up adding noise to the
-    internet. And that's the last thing I would like to do! I love the internet! Adding unneccesary stuff to it is
-    exactly what I want to avoid!
+    the first 5~10 search results. They are your typical run-of-the-mill tutorials that replicate what's written on the
+    official framework/language guide<sup>4</sup>. At least to me, this content just ends up adding noise to the
+    internet. And that's the last thing I would like to do! I love the internet! Adding unnecessary stuff to it is
+    exactly what I want to avoid.
   </p>
 
   <p>
-    To be entirely fair, most of my skills are no more than on the begginer level on X language. My struggles with
-    Python are the same struggles anyone else had with Python (mutable defaults), and my struggles with Node.js are the
-    ones that you solve clicking on the correct StackOverflow link. If I were to blog about my experiences on React, it
-    would be exactly the same as everybody else's (i.e, an article that teaches on how to use `useState()` with a number
-    counting component). I don't have a specific framework on which I'm savvy enough to talk about the internals of. I
+    To be entirely fair, most of my skills are no more than on the beginner level on X language. My struggles with
+    Python are the same struggles anyone else has with Python (mutable defaults), and my struggles with Node.js are the
+    ones that you solve by clicking on the correct StackOverflow link. If I were to blog about my experiences on React,
+    it
+    would be the exact same as everybody else's (i.e, an article that teaches on how to use `useState()` with a numbers
+    counting component). I don't have a specific framework on which I'm savvy enough to talk about the internals. I
     don't have any particularly good war stories (the ones that are really useful on those "What's the weirdest bug you
     ever encountered?" programming interviews). I get that sometimes an impostor syndrome is that, a person
     doubting themselves and feeling like a fraud. But sometimes, you are not an impostor (nor a fraud), you just are.
@@ -144,21 +146,22 @@
 
   <p>
     Or maybe I do think it's good CV building, but I just can't accept it. I tend to feel (though not accept) that
-    nowadays just <em>doing</em> is not enough. Nowadays it seems that you have to both do, and talk about what you just
-    did. Build a whole narrative around it. You have to code a new feature, and then talk about it in your latest 1:1
-    with your manager. And don't forget to write how you are proud of it in your perfomance review, or it doesn't count.
+    just <em>doing</em> is not enough. Nowadays it seems that you have to both do, and talk about what you just
+    did. Build a whole narrative around it. You have to code a new feature, and then talk about it in your next 1:1.
+    And don't forget to write how you are proud of it in your performance review, or it doesn't count.
     If you just build it, maybe no one will come. Sometimes talk is not cheap, and showing the code is not enough.
   </p>
 
   <p>
-    But I'm tired of that! Not all tech side-projects have a cute origin story, and not everything built should have a
-    post accompanying it. Even though something may seem technically cute, there might be not so much to talk around it.
+    But I'm tired of that! Not all tech side-projects have a clever origin story, and not everything built should have a
+    post accompanying it. Even though something may seem technically cute, there might be not so much to say around it.
     Not all code speaks for itself, but making a circus around it shouldn't be the solution.
   </p>
 
   <p>
     <b>In conclusion</b>, I think the gist of it is... blogging is clearly made for people who like writing and/or
-    sharing. And I think it's okay if I'm not particular fond of any those two things. I shouldn't succumb to the peer
+    sharing. And I think it's okay if I'm not particularly fond of any of those two things. I shouldn't succumb to the
+    peer
     pressure of thinking that everybody but me has a blog. So, if I were to have a blog, the motivation should be noble
     and straightforward: "I like to write and share my experiences".
   </p>
