Move footnote near to paragraph it references

--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
       <sup>3</sup>
       UNIX: A History and a Memoir >> Chapter 5 >> 5.3 Document Preparation >> Book publication
     </p>
-
-    <p>
-      <sup>4</sup>
-      Marco Rogers has some really good <a href="https://twitter.com/polotek/status/1351297231916187648"
-        target="_blank">thoughts</a> on this topic.
-    </p>
   </aside>
 
   <p>
@@ -121,6 +115,14 @@
   </p>
 
   <h2>I'm not a good programmer</h2>
+
+  <aside>
+    <p>
+      <sup>4</sup>
+      Marco Rogers has some really good <a href="https://twitter.com/polotek/status/1351297231916187648"
+        target="_blank">thoughts</a> on this topic.
+    </p>
+  </aside>
 
   <p>
     Whenever I try to search for a how-to online, or I need to do a quick "Hello, World!", I often find myself skipping
