Do another post revision

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         UNIX: A History and a Memoir</a></em>
     by Brian Kernighan<sup>1</sup>.
 
-    One is a recollection of past blog posts written by one of the most influential programmers and internet activists
+    One is a compilation of past blog posts written by one of the most influential programmers and internet activists
     of this century, another one is a collection of essays by an authority on written hackerdom history, and the last
     one is a memoir by a CS legend whose most important contributions include books considered the state of
     the art on technical writing<sup>2</sup>.
@@ -83,7 +83,7 @@
 
   <p>
     So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I
-    want one! I have side projects of which I'm proud of, I do encounter bugs that feel like they deserve an entire
+    want one! I have side projects of which I'm proud of, I do encounter bugs that seem like they deserve an entire
     post dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
   </p>
 
@@ -111,7 +111,7 @@
     But then... isn't that just Twitter? I don't have Twitter for a reason: nobody cares about my thoughts. So, why
     would
     they care about my longer-than-140-characters thoughts? I'm not trying to say that a blog and social media are the
-    exact same medium, but in the end... it's just me, talking about myself.
+    same medium, but in the end... it's just me, talking about myself.
   </p>
 
   <h2>I'm not a good programmer</h2>
@@ -147,7 +147,8 @@
   <h2>I don't think it's good CV building</h2>
 
   <p>
-    Or maybe I do think it's good CV building, but I just can't accept it. I tend to feel (though not accept) that
+    Or maybe I do think it's good CV building, but I just can't accept it. Lately, I tend to feel (though not accept)
+    that
     just <em>doing</em> is not enough. Nowadays it seems that you have to both do, and talk about what you just
     did. Build a whole narrative around it. You have to code a new feature, and then talk about it in your next 1:1.
     And don't forget to write how you are proud of it in your performance review, or it doesn't count.
