Try to write a little bit simpler

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <p>
     So where is my blog? Nowadays it seems like every other kid in town has one. And don't get me wrong, I swear I
-    want one! I have side projects of which I'm proud of, I do encounter bugs that seem like they deserve an entire
+    want one! I have side projects of which I'm proud of, I do encounter bugs that could deserve an entire
     post dedicated to them, and I do feel like I have a hot take on the latest blockchain news.
   </p>
 
@@ -137,7 +137,7 @@
     Python are the same struggles anyone else has with Python (mutable defaults), and my struggles with Node.js are the
     ones that you solve by clicking on the correct StackOverflow link. If I were to blog about my experiences on React,
     it
-    would be the exact same as everybody else's (i.e, an article that teaches on how to use `useState()` with a numbers
+    would be the exact same as everybody else's (i.e, I'll teach you how to use `useState()` with a numbers
     counting component). I don't have a specific framework on which I'm savvy enough to talk about the internals. I
     don't have any particularly good war stories (the ones that are really useful on those "What's the weirdest bug you
     ever encountered?" programming interviews). I get that sometimes an impostor syndrome is that, a person
@@ -162,7 +162,7 @@
   </p>
 
   <p>
-    <b>In conclusion</b>, I think the gist of it is... blogging is clearly made for people who like writing and/or
+    <b>In conclusion</b>, I think the gist of it is... blogging is clearly made for people who enjoy writing and/or
     sharing. And I think it's okay if I'm not particularly fond of any of those two things. I shouldn't succumb to the
     peer
     pressure of thinking that everybody but me has a blog. So, if I were to have a blog, the motivation should be noble
